--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "description": "",
   "dependencies": {
     "stream-chain": "^3.3.2",
-    "stream-json": "^1.9.1"
-  },
-  "devDependencies": {
+    "stream-json": "^1.9.1",
     "@faker-js/faker": "^9.3.0"
   }
 }
